add watch task for file changes
The syntax of the index.html file will automatically be checked after
file changes unsing vnu (Nu Markup Checker installed with brew).

--- a/package.json
+++ b/package.json
@@ -6,5 +6,12 @@
   "repository": "git@github.com:BeniRupp/benjaminrupp.de.git",
   "author": "Benjamin Rupp <github@benjaminrupp.de>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "check:html": "vnu src/index.html",
+    "watch": "watch 'yarn check:html' src"
+  },
+  "devDependencies": {
+    "watch": "^1.0.2"
+  }
 }
